# infini-coc

./: .gitignore  README.md  infini.toml  pyproject.toml  tests.py
src/: __init__.py  events.py  handlers.py  investigator.py  madness.py  utils.py
tests/: test_command.py
