[project]
name = "infini-coc"
version = "0.1.0-beta.1"
description = "Infini COC 规则包"
authors = [
    {name = "苏向夜", email = "fu050409@163.com"},
]
dependencies = [
    "infini>=2.0.4",
    "diceutils>=0.2.6",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "AGPL-3.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ipdm>=0.1.3",
    "pytest>=8.0.1",
]
