[project]
name = "coc"
version = "0.1.0-rc.1"
description = "克苏鲁神话规则包"
authors = [
    {name = "苏向夜",email = "fu050409@163.com"},
]
dependencies = ["infini>2.1.0"]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "AGPLv3"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = ["pytest"]
